# janus-ftl-orchestrator

./: .dockerignore  .gitignore  .gitmodules  Configuration.cpp  Configuration.h  Dockerfile  FtlConnection.cpp  FtlConnection.h  FtlTypes.h  IConnection.h  IConnectionManager.h  IConnectionTransport.h  JanusFtlOrchestrator.cpp  JanusFtlOrchestrator.h  OpenSslPtr.h  OrchestrationConnection.cpp  OrchestrationConnection.h  OrchestrationProtocolTypes.h  Orchestrator.cpp  Orchestrator.h  README.md  StreamStore.cpp  StreamStore.h  TlsConnection.cpp  TlsConnection.h  TlsConnectionManager.cpp  TlsConnectionManager.h  TlsConnectionTransport.cpp  TlsConnectionTransport.h  Util.h  main.cpp  meson.build  test-client.cpp
.github/workflows/: build.yml
docs/: PROTOCOL.md
docs/uml/: routing-strategy-activity.plantuml  sequence-diagram-no-relays.plantuml  sequence-diagram-with-relays.plantuml  stream-routing-use-case.plantuml  typical-flow.plantuml
inc/: FtlConnection.h  FtlOrchestrationClient.h  IConnection.h  IConnectionTransport.h  TlsConnectionTransport.h
pch/: pch.h  test_pch.h
protobuf/: ftl_orchestrator.proto  ftl_orchestrator_streaming.proto
src/: ChannelSubscription.h  Configuration.cpp  Configuration.h  FtlConnection.cpp  FtlConnection.h  FtlOrchestratorService.cpp  IConnection.h  IConnectionManager.h  NodeStore.cpp  NodeStore.h  OrchestrationProtocolTypes.h  Orchestrator.cpp  Orchestrator.h  QueueOne.h  Signal.cpp  Signal.h  Stream.cpp  Stream.h  StreamStore.cpp  StreamStore.h  SubscriptionStore.cpp  SubscriptionStore.h  TlsConnectionManager.cpp  TlsConnectionManager.h  TlsConnectionTransport.cpp  concurrent_unordered_map.h  main.cpp
subprojects/: spdlog.wrap
test/: OrchestratorTests.cpp  TestLogging.h  test.cpp
test/functional/: FunctionalTests.cpp
test/mocks/: MockConnection.h  MockConnectionManager.h  MockConnectionTransport.h
test/unit/: FtlConnectionUnitTests.cpp  OrchestratorUnitTests.cpp
